monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2007/A2007Sup5.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2007;

grammar A2007Sup5 extends de.monticore.grammar.cocos.invalid.A2007.A2007Super {

  N = "one" M?;

}